--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
         <pre id="h2">
     Coole Fotos
-                                               auf meinem Handy
-                                die ich mag:</pre>
+                                               auf Handys 
+                              </pre>
       
     </h2>
         
